--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,13 +1,1 @@
-$blue: blue;
-
-.test {
-    display: block;
-
-    &-button {
-        background-color: $blue;
-    }
-}
-
-h1 {
-    color: red;
-}
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
