--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+body {
+    text-shadow: 0 0.05rem 0.1rem rgb(0 0 0 / 50%);
+    box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%);
+}
