--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,3 +4,7 @@ body {
     text-shadow: 0 0.05rem 0.1rem rgb(0 0 0 / 50%);
     box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%);
 }
+
+.h-100 {
+    height: 100% !important;
+}
