--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 body {
     text-shadow: 0 0.05rem 0.1rem rgb(0 0 0 / 50%);
     box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%);
+    height: 100% !important;
 }
 
 .h-100 {
