--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,5 @@
+// Bootstrap variable overrides 
 @import "variables.scss";
 
+// Bootstrap Styles
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
