--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,14 +1,14 @@
-$white: #fff;
+$white: rgb(65, 65, 65);
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #6c757d;
-$gray-700: #495057;
-$gray-800: #343a40;
-$gray-900: #212529;
-$black: #000;
+$gray-400: #ffffff;
+$gray-500: #ffffff;
+$gray-600: #ffffff;
+$gray-700: #ffffff;
+$gray-800: #ffffff;
+$gray-900: #ffffff;
+$black: rgb(255, 255, 255);
 
 $blue: #0d6efd;
 $indigo: #6610f2;
